// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`head.html.test 1`] = `
====================================options=====================================
parsers: ["test"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<head>
  <% %> <% %>
<% start %>
    <meta />
<% %>
      <% %>
  <meta />
<% middle %>
    <meta />
    <% %>
<% end %>
  <meta /> <% %>
</head>

=====================================output=====================================
<head>
  <% %>
  <% %>
  <% start %>
    <meta />
    <% %>
    <% %>
    <meta />
  <% middle %>
    <meta />
    <% %>
  <% end %>
  <meta />
  <% %>
</head>

================================================================================
`;

exports[`html.html.test 1`] = `
====================================options=====================================
parsers: ["test"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<html lang="<% %>">
      <% %>
</html>

=====================================output=====================================
<html lang="<% %>">
  <% %>
</html>

================================================================================
`;

exports[`link.html.test 1`] = `
====================================options=====================================
parsers: ["test"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<head>
    <link rel="stylesheet" href="<% %>" />
</head>

=====================================output=====================================
<head>
  <link rel="stylesheet" href="<% %>" />
</head>

================================================================================
`;

exports[`meta.html.test 1`] = `
====================================options=====================================
parsers: ["test"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<head>
    <meta name="description" content="<% %>" />
  <meta name="viewport" content="width=device-width, initial-scale=<% %>" />
  <% start %>
    <meta name="viewport"/>
    <% %>
  <% end %>
</head>

=====================================output=====================================
<head>
  <meta name="description" content="<% %>" />
  <meta name="viewport" content="width=device-width, initial-scale=<% %>" />
  <% start %>
    <meta name="viewport" />
    <% %>
  <% end %>
</head>

================================================================================
`;

exports[`style.html.test 1`] = `
====================================options=====================================
parsers: ["test"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<head>
  <style>
   <%  %>
  </style>
</head>
=====================================output=====================================
<head>
  <style>
    <%  %>
  </style>
</head>

================================================================================
`;

exports[`title.html.test 1`] = `
====================================options=====================================
parsers: ["test"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<head>
  <title> <%  %> </title>
</head>
<head>
  <title> <%  %> </title>
</head>
<head>
  <title>e<%  %>e</title>
</head>
<head>
  <title>e <%  %> e</title>
</head>

=====================================output=====================================
<head>
  <title><% %></title>
</head>
<head>
  <title><% %></title>
</head>
<head>
  <title>e<% %>e</title>
</head>
<head>
  <title>e <% %> e</title>
</head>

================================================================================
`;
